# web_htop

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
ui/: .gitignore  index.html  package.json
ui/src/: App.vue  main.ts  style.scss
ui/src/assets/: font_faces.scss
