[package]
name = "web_htop"
version = "0.1.0"
edition = "2021"
authors = ["Ferdinand Keller <ferdinand.keller@proton.me>"]

[dependencies]
futures = "0.3.26"
include_dir = { version = "0.7.3", features = ["glob"] }
serde_json = "1.0.93"
sysinfo = "0.28.2"
tokio = { version = "1.26.0", features = ["macros"] }
warp = "0.3.3"
